# zasek

./: README.md  pyproject.toml
zasek/: manage.py
zasek/api/: core.py  filters.py  serializers.py  settings.py  tests.py  urls.py  views.py
zasek/api/migrations/: 0001_initial.py  0002_auto_20190223_1632.py  0002_fix_start_field.py  0003_auto_20190223_1738.py  0004_duration.py
zasek/api/models/: __init__.py  projects.py  tasks.py
zasek/main/: settings.py  urls.py  wsgi.py
